--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,11 @@ repositories {
 }
 
 dependencies {
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2',
+            'com.fasterxml.jackson.core:jackson-core:2.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile (
+            'org.codehaus.groovy:groovy-all:2.4.4',
+            'org.spockframework:spock-core:1.0-groovy-2.4'
+    )
 }
