--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,23 @@ repositories {
 
 dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2',
-            'com.fasterxml.jackson.core:jackson-core:2.9.2'
+            'com.fasterxml.jackson.core:jackson-core:2.9.2',
+            'com.intellij:forms_rt:7.0.3',
+            'org.codehaus.mojo:ideauidesigner-maven-plugin:1.0-beta-1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile (
             'org.codehaus.groovy:groovy-all:2.4.4',
             'org.spockframework:spock-core:1.0-groovy-2.4'
     )
+}
+
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'com.heavyweightsoftware.rookery.CollectData'
+        )
+    }
+
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
